tests/errors/macros/argcount_unknown_arg.ark
($ suffix-dup (sym x) {
    ($if (> x 1)
        (suffix-dup sym (- x 1)))
    ($symcat sym x)})

($ partial (func ...defargs) {
    ($ bloc (suffix-dup a (- ($argcount func) (len defargs))))
    (fun (bloc) (func ...defargs bloc))
    ($undef bloc)})

(let test_func (fun (a b c) (* a b c)))
(let test_func1 (partial test_func 1))
(let test_func1_2 (partial test_func1!2))
